<?xml version="1.0"?>

<package format="2">

  <name>time_series</name>
  <version>1.0.0</version>
  <description>Time Series</description>
  <license>BSD 3-Clause</license>
  <author email="vberenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <author email="mnaveau@tue.mpg.de">Maximilien Naveau</author>
  <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
  <author email="manuel.wuthrich@gmail.com">Manuel Wuthrich</author>
  <maintainer email="manuel.wuthrich@gmail.com">Manuel Wuthrich</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend> mpi_cmake_modules </depend>
  <depend> shared_memory </depend>
  <depend> real_time_tools </depend>
  
  <export>
  </export>

</package>
