<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

    <name>time_series</name>
    <version>1.0.0</version>

    <description>
        Time series buffers.
    </description>

    <license>BSD 3-Clause</license>
    <author email="vberenz@tuebingen.mpg.de">Vincent Berenz</author>
    <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
    <author email="mnaveau@tue.mpg.de">Maximilien Naveau</author>
    <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
    <author email="manuel.wuthrich@gmail.com">Manuel Wuthrich</author>
    <maintainer email="manuel.wuthrich@gmail.com">Manuel Wuthrich</maintainer>
    <url type="repository">https://github.com/machines-in-motion/time_series</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>mpi_cmake_modules</depend>
    <depend>shared_memory</depend>
    <depend>real_time_tools</depend>
    <depend>signal_handler</depend>
    <depend>Eigen3</depend>
    <depend>Boost</depend>
    <depend>Threads</depend>

    <test_depend>ament_cmake_gtest</test_depend>
  
    <export>
        <build_type>ament_cmake</build_type>
    </export>
  
</package>