<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>time_series</name>
  <version>1.0.0</version>
  <description>thread safe circular memory possibly hosted in shared memory </description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <author email="maximilien.naveau@tuebingen.mpg.de">Maximilien Naveau</author>
  <author email="felix.widemaier@tuebingen.mpg.de">Felix Widemaier</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>shared_memory</depend>
  <depend>real_time_tools</depend>
  <depend>signal_handler</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_nose</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
